# deepgram-voice-agent

./: .gitignore  Dockerfile  Pipfile  README.md  business_logic.py  client.py  config.py  deepgram.toml  functions.py  pyproject.toml  requirements.txt
common/: agent_functions.py  agent_templates.py  business_logic.py  log_formatter.py  prompt_templates.py
static/: style.css  syncscroll.js
templates/: index.html
