[tool.poetry]
package-mode = false
name = "deepgram-voice-agent-debugger"
version = "0.1.0"
description = ""
authors = ["Jacob-Lasky <jacob.s.lasky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyaudio = "0.2.14"
websockets = "12.0"
janus = "1.0.0"
flask = "3.0.0"
flask-socketio = "5.3.6"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
