[project]
name = "deepgram-voice-agent-debugger"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacob Lasky",email = "6790237+Jacob-Lasky@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyaudio (==0.2.14)",
    "websockets (==12.0)",
    "janus (==1.0.0)",
    "flask (==3.0.0)",
    "flask-socketio (==5.3.6)",
    "python-dotenv (==1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
