[project]
name = "deepgram-voice-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.0",
    "flask-socketio==5.3.6",
    "janus==1.0.0",
    "pyaudio==0.2.14",
    "python-dotenv==1.0.0",
    "requests==2.32.3",
    "websockets==12.0",
]
